--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 <body>
 
+<div class="wrapper">
+    <h1>Générateur d'Histoires</h1>
+    <input type="text" id="username" placeholder="Entrez votre prénom">
+    <button id="generer">Générer</button>
+</div>
+
+<div id="histoire">
+
+</div>
 
 <script src="js/script.js"></script>
 </body>
